k8s/web-prod/mongo_statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongodb-standalone
  namespace: ensembl-apps
spec:
  serviceName: database
  replicas: 1
  template:
    metadata:
      labels:
        app: database
        selector: mongodb-standalone
  spec:
    containers:
      - name: mongodb-standalone
        image: mongo
        ports:
          - containerPort: 27017
        volumeMounts:
          - name: mongo-persistent-storage
            mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
      name: mongo-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
