k8s/web-prod/thoas_deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: thoas-server-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: thoas-server
    spec:
      imagePullSecrets:
        - name: thoas-server-pull-secret
      containers:
        - name: thoas-server
          image: dockerhub.ebi.ac.uk/ensembl-apps/ensembl-thoas:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          command: ["uvicorn"]
          args: [
            "--host",
            "0.0.0.0",
            "--port",
            "8000",
            "--env-file",
            "/env/.env",
            "graphql_service.server:APP"
          ]
          volumeMounts:
            - mountPath: /conf/
              name: thoas-configmap
            - mountPath: /env/.env
              name: thoas-config-location
      volumes:
        - name: thoas-configmap
          configMap:
            name: thoas-configmap
        - name: thoas-config-location
          configMap:
            name: thoas-config-location
