k8s/web-prod/external_mongo_endpoint.yaml
apiVersion: v1
kind: Endpoints
# Target for MongoDB traffic from inside k8s
# Note the name matches the Service
metadata:
  name: mongo
  namespace: ensembl-apps
subsets:
  - addresses:
      - ip: 10.42.24.29
    ports:
      - port: 27017
