k8s/web-prod/dodgy_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ensembl-thoas-ingress-<DEPLOYMENT_TAG>
  namespace: ensembl-apps
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#rate-limiting
    # nginx.ingress.kubernetes.io/limit-rpm: "2"
spec:
  rules:
  - host: <SUB-DOMAIN>.ensembl.org
    http:
      paths:
      - backend:
          service:
            name: thoas-server-svc
            port:
              number: 8000
        path: /
        pathType: Prefix
